Update API to better process
